LogOutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  labels:
    app: log-output
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: log-output
